Changed versions for addons back to Vaadin 14 and Java 8 to provide more backward compatibility. Also updated the demo to Vaadin 24